--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,16 +3,31 @@ project:
   output-dir: docs
 
 website:
-  title: "nevus"
+  title: "Michael Scherzer"
+  
+  
+  page-footer:
+    left: "A work by Michael Scherzer"
+    right:
+      - icon: github
+        href: https://github.com
+      - icon: twitter
+        href: https://twitter.com
+      - icon: envelope
+        href: mailto:michael.scherzer@hci.utah.edu
+  
+  
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+       
+
 
 format:
   html:
-    theme: cosmo
+    theme: journal
     css: styles.css
     toc: true
 
