--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,7 @@ project:
 
 website:
   title: "Michael Scherzer"
-  google-analytics: UG-XDFMNBGHPJ
-  
+  google-analytics: "UG-XDFMNBGHPJ"
   page-footer:
     left: "A site by Michael Scherzer"
     right:
