--- a/publications/ay_23-24.yml
+++ b/publications/ay_23-24.yml
@@ -3,7 +3,7 @@
   university: Journal of Investigative dermatology
   number: PMAP 8551/4551
   url: https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub/
-  logo: logos/Capture.jpg
+  logo: logos/Capture.JPG
   semester:
   - name: Fall 2023
     url: https://www.sciencedirect.com/science/article/pii/S0022202X23019607?via%3Dihub
